# borderless

./: .gitignore  Anchor.toml  package.json
Client/: package-lock.json  package.json  tsconfig.json
Client/app/: globals.css  layout.tsx  page.tsx
Client/app/api/chat/: route.ts
Client/app/api/check-name-chat/: route.ts
Client/app/api/switch-name-chat/: route.ts
Client/app/api/transactions/: route.ts
Client/app/api/users/: route.ts
Client/app/api/users/[userId]/: route.ts
Client/app/components/: AppContext.tsx  ContactsGrid.tsx  LandingPage.tsx  LoginButton.tsx  RecentTransactions.tsx  SearchBar.tsx  TransferDialog.tsx
Client/app/components/ui/: Navbar.tsx  Registration.tsx  Searchbar.tsx
Client/app/pay/[userId]/: page.tsx
Client/app/register/: page.tsx
Client/app/user/[userId]/: page.tsx
Client/components/: PayRequestDialog.tsx  PaymentModal.tsx  RequestModal.tsx  TransactionHistory.tsx  apiRequests.ts
Client/components/ui/: UserNavbar.tsx  button.tsx
Client/lib/: connectToDB.ts
Client/lib/models/: Transaction.tsx  User.tsx
Client/store/: store.ts
Client/types/: next-auth.d.ts
programs/borderless/: Cargo.toml
programs/borderless/src/: lib.rs
tests/: borderless.ts
utils/: apiRequests.ts
