[package]
name = "borderless"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "borderless"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
#anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
#anchor-spl = "0.29.0"
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = "0.30.1"
orca_whirlpools_client = "0.1.8"
#orca_whirlpools_core = "0.2.3"